[package]
name = "data_scraping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1.0"
scraper = "0.18.0"
regex = "1.5.4"
csv = "1.1.6"
select = "0.6.0"
xml = "0.8.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1.2"

[dev-dependencies]
assert_cmd = "1.0.6"
tokio ={ version = "1.12.0", features = ["full"] }
reqwest = "0.11"
serde_json = "1.0"
scraper = "0.18.0"